--- a/css/creditos.css
+++ b/css/creditos.css
@@ -17,11 +17,13 @@ body {
     max-width: 600px;
     width: 80%;
     text-align: center;
+    animation: slide-up 1s ease-in-out;
 }
 
 h1 {
     color: #333;
     margin-bottom: 30px;
+    animation: blink 2s infinite;
 }
 
 .info-box {
@@ -41,26 +43,65 @@ h1 {
     margin: 5px 0;
 }
 
-.bottom-left-image {
+.bottom-left-image,
+.top-right-image,
+.bottom-right-image {
     position: absolute;
-    bottom: 20px;
-    left: 20px;
-    width: 300px; 
-    height: auto; 
+    animation: bounce 1s ease-in-out;
 }
 
-.top-right-image { 
-    position: absolute;
+.bottom-left-image {
+    bottom: 20px;
+    left: 20px;
+    width: 300px;
+    height: auto;
+}
+
+.top-right-image {
     top: 20px;
     right: 20px;
     width: 200px;
     height: auto;
 }
 
-.bottom-right-image { 
-    position: absolute;
+.bottom-right-image {
     bottom: 20px;
     right: 20px;
-    width: 300px; 
+    width: 300px;
     height: auto;
+}
+
+@keyframes slide-up {
+    0% {
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(-20px);
+    }
+    50% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
