--- a/css/alias.css
+++ b/css/alias.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("media/jungle.avif");
+    background-image: url("../media/BackGround.png");
     background-size: cover;
 }
 
