--- a/css/game1.css
+++ b/css/game1.css
@@ -18,4 +18,25 @@
     margin-right: 10px;
     border: 2px solid black;
   }
+
+  #cajasoltar1,#cajasoltar2,#cajasoltar3, #cajasoltar4, #cajasoltar5, #cajasoltar6, #cajasoltar7, #cajasoltar8, #cajasoltar9{
+    float: left;
+    width: 500px;
+    height: 500px;
+    margin: 10px;
+    border: 1px solid #999999;
+    background-color: rgb(252, 0, 0);
+   }
+   #cajaimagenes{
+    float: left;
+    width: 500px;
+    height: 500px;
+    margin: 10px;
+    border: 1px solid #999999;
+    background-color: rgb(0, 68, 255);
+   }
+   #cajaimagenes > img{
+    float: right;
+    padding: 5px;
+   }
   
