--- a/css/creditos.css
+++ b/css/creditos.css
@@ -71,6 +71,25 @@ h1 {
     height: auto;
 }
 
+#regresarButton {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+#regresarButton:hover {
+    background-color: #45a049;
+}
+
 @keyframes slide-up {
     0% {
         transform: translateY(50px);
@@ -105,3 +124,4 @@ h1 {
         opacity: 1;
     }
 }
+
