--- a/css/game1.css
+++ b/css/game1.css
@@ -1,42 +1,178 @@
-.pantalla {
+
+  
+  #games{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  #tablero img{
     width: 50%;
-    float: left;
-    padding: 20px;
+    height: auto;
+    margin: 10px;
+  }
+
+  #tablero{
+    position: absolute;
+    left: 37%;
+    margin-top: 100px;
+  }
+
+  #puntuacion{
+    position: absolute;
+    top: 20%;
+    left: 5%;
+  }
+  #time{
+    position: absolute;
+    top: 20%;
+    left: 28%;
+  }
+
+  #alias{
+    position: absolute;
+    top: -20%;
+    left: 21%;
+  }
+
+ 
+
+  #salir{
+    margin: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    bottom: 7%;
+    left: 60%;
+    transform: translateX(-50%);
+  }
+
+  #salir img {
+    position: absolute;
+
+    width: 100px;
+    height: auto;
+    margin-left: -1%;
+    margin-top: -30px;
+  
+  }
+
+  #cont1{
+    margin: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    bottom: 3%;
+    left: 52%;
+    transform: translateX(-50%);
+  }
+
+  #cont1 img {
+    position: absolute;
+    width: 100px;
+    height: auto;
+    margin-left: -1%;
+    margin-top: -30px;
+  
+  }
+
+  #names{
+    position: absolute;
+    top: 40%;
+    margin-left: 14%;
+  }
+
+  #cont2{
+    margin: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    bottom: 3%;
+    left: 52%;
+    transform: translateX(-50%);
+  }
+
+  #cont2 img {
+    position: absolute;
+    width: 100px;
+    height: auto;
+    margin-left: -1%;
+    margin-top: -30px;
+  
+  }
+
+  #cont3{
+    margin: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    bottom: 3%;
+    left: 10%;
+    transform: translateX(-50%);
+  }
+
+  #cont3 img {
+    position: absolute;
+    width: 100px;
+    height: auto;
+    margin-left: -1%;
+    margin-top: -30px;
+  
+  }
+
+  #gamePlank{
+    position: absolute;
+    width: 80%;
+    top: -10%;
+    left: 7%;
   }
   
-  .animalitos {
-    margin-bottom: 20px;
-  }
-  
-  .casas {
-    display: flex;
-  }
-  
-  .casa {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-    border: 2px solid black;
-  }
 
   #cajasoltar1,#cajasoltar2,#cajasoltar3, #cajasoltar4, #cajasoltar5, #cajasoltar6, #cajasoltar7, #cajasoltar8, #cajasoltar9{
     float: left;
-    width: 500px;
-    height: 500px;
-    margin: 10px;
-    border: 1px solid #999999;
-    background-color: rgb(252, 0, 0);
+    width: 30%;
+    height: 50%;
+   
+    
    }
    #cajaimagenes{
     float: left;
     width: 500px;
     height: 500px;
     margin: 10px;
-    border: 1px solid #999999;
-    background-color: rgb(0, 68, 255);
+    
    }
-   #cajaimagenes > img{
-    float: right;
-    padding: 5px;
-   }
+   #games img{
+    width: 150px;
+    height: auto;
+    margin: 30px;
+    margin-left: 6%;
+    
   
+   }
+
+   canvas {
+    width: 300px;
+    height: 300px;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+    }
+
+    
+  
+   
+   
+   
+
+   
