--- a/css/game1.css
+++ b/css/game1.css
@@ -83,8 +83,9 @@
 
   #names{
     position: absolute;
-    top: 40%;
-    margin-left: 14%;
+    top: 41%;
+    margin-left: 13%;
+    font-weight: bold
   }
 
   #cont2{
